--- a/Junaid.GoogleGemini.Net/Junaid.GoogleGemini.Net.csproj
+++ b/Junaid.GoogleGemini.Net/Junaid.GoogleGemini.Net.csproj
@@ -10,10 +10,10 @@
     <Description>An open-source .NET library to use Gemini (Google’s largest and most capable AI model yet).</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/jaslam94/Junaid.GoogleGemini.Net</RepositoryUrl>
-    <PackageTags>GoogleGemini; Gemini; Gemini.Net; GeminiDotNet; Google.NET;</PackageTags>
+    <PackageTags>GoogleGemini.Net; Google; Gemini; Gemini.Net; GenerativeAI; dotnet;</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Added chat service to use Gemini Content API using Text input to build freeform conversations across multiple turns.</PackageReleaseNotes>
-    <Version>1.0.2</Version>
+    <PackageReleaseNotes>Added configuration paramater to content generation method. It will be used to configure model and apply safety setting while generating content.</PackageReleaseNotes>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
