--- a/Junaid.GoogleGemini.Net/Junaid.GoogleGemini.Net.csproj
+++ b/Junaid.GoogleGemini.Net/Junaid.GoogleGemini.Net.csproj
@@ -12,8 +12,8 @@
     <RepositoryUrl>https://github.com/jaslam94/Junaid.GoogleGemini.Net</RepositoryUrl>
     <PackageTags>GoogleGemini.Net; Google; Gemini; Gemini.Net; GenerativeAI; dotnet;</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Added stream generate content method to all services.</PackageReleaseNotes>
-    <Version>2.1.0</Version>
+    <PackageReleaseNotes>Now targets .Net 6.0 and .Net 8.0 as well.</PackageReleaseNotes>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
