updated release notes

--- a/Junaid.GoogleGemini.Net/Junaid.GoogleGemini.Net.csproj
+++ b/Junaid.GoogleGemini.Net/Junaid.GoogleGemini.Net.csproj
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/jaslam94/Junaid.GoogleGemini.Net</RepositoryUrl>
     <PackageTags>GoogleGemini.Net; Google; Gemini; Gemini.Net; GenerativeAI; dotnet;</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Internal refactoring for the stream content method.</PackageReleaseNotes>
+    <PackageReleaseNotes>Internal refactoring for the stream content method to reduce memory consumption and improving performance.</PackageReleaseNotes>
     <Version>3.1.1</Version>
   </PropertyGroup>
 
